--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,21 @@
 </head>
 <body>
   <h1><%= title %></h1>
+
+  <% if (locals.user) {%>
+    <h1>WELCOME BACK <%= user.username %></h1>
+    <a href="/log-out">LOG OUT</a>
+  <% } else { %>
+  <h2>please log in or sign up</h2>
+  <form action="/log-in" method="POST">
+    <label for="username">Username</label>
+    <input id="username" name="username" placeholder="username" type="text" />
+    <label for="password">Password</label>
+    <input id="password" name="password" type="password" />
+    <button type="submit">Log In</button>
+  </form>
+  <a href="/sign-up">sign up</a>
+  <%}%>
+
 </body>
 </html>
