--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,8 +7,12 @@
   </div>
   <ul class = "navbar-links">
     <li><a href="/">Home</a></li>
-    <li><a href="">Uploads</a></li>
-    <li><a href="log-in">Log In</a></li>
+    <li><a href="/files">Uploads</a></li>
+    <%if(locals.user){%>
+    <li><a href="log-out">Log Out</a></li>
+    <%}else{%>
+    <li><a href="log-in">Log In</a></li><%}%>
+    
   </ul>
 </nav>
 </header>
