--- a/views/fileInfo.ejs
+++ b/views/fileInfo.ejs
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>File Info - Uploadify</title>
   <link rel="stylesheet" href="/style.css">
+  <script src="/js/copySharedLink.js" defer></script>
 </head>
 <body>
   <div class="root-container">
@@ -21,15 +22,14 @@
 
         <div>
           <p class = "folder-header file-info-card-header">
-          <%-locals.file.icon%>
-          <%=locals.file.originalName%></p>
+          <%-locals.file.icon%></p>
 
         </div>
 
       </div>
 
       <div class="file-info-card">
-        <p class="file-info-card-title"><%= file.originalName %></p>
+        <p class="file-info-card-title">File Details</p>
         <div class="file-info-card-body">
           <p>Name:</p>
           <p><%=locals.file.originalName%></p>
@@ -42,11 +42,45 @@
         </div>
 
         <div class="file-info-card-buttons">
-          <a href="/download-file/<%=locals.file.id%>" class="blue-button">Download File</a>
-          <form action="/delete-file/<%= locals.file.id %><%if(locals.file.folderId){%>/<%=locals.file.folderId%><%}%> " method="POST" onsubmit="return confirm('Are you sure you want to delete this file?');">
-            <button type="submit" class="red-button">Delete File</button>
-          </form>
+          <div class="file-info-card-buttons-top">
+            <button onclick="window.location='/download-file/<%=locals.file.id%>'" class="blue-button">Download File</butotn>
+            <form action="/delete-file/<%= locals.file.id %><%if(locals.file.folderId){%>/<%=locals.file.folderId%><%}%> " method="POST" onsubmit="return confirm('Are you sure you want to delete this file?');">
+              <button type="submit" class="red-button">Delete File</button>
+            </form>
+          </div>
+
+          <div class="file-info-card-buttons-bottom">
+            <form action="/file/<%= locals.file.id %>/link" method="POST">
+              <button type="submit" class="darker-blue-button generate-link-button">Generate Shareable Link</button>
+              <div class="expiration">
+                <p>Link Expires In:</p>
+                <select id="expiration" name="expiration">
+                  <option value="30">30 minutes</option>
+                  <option value="60">1 hour</option>
+                  <option value="360">6 hours</option>
+                  <option value="720">12 hours</option>
+                  <option value="1440" selected>1 day</option>
+                </select>
+              </div>
+            </form>
+          </div>
+          <a href="" class="file-info-card-manage-links-button">Manage Links</a>
+          <%if(locals.success){%><%=locals.success%><%}%>
+          <% if (locals.clipboard && locals.clipboard.length > 0) { %>
+            <div class="copy-container">
+              <div class="copy-container-top">
+                <input type="text" value="<%= locals.clipboard %>" readonly class="copy-input">
+                <button class="copy-button darker-blue-button">Copy Link</button>
+              </div>
+                <div class="copy-container-bottom">
+                <p class="copy-status"></p>
+              </div>
+            </div>
+          <% } %>
         </div>
+        <br>
+        
+        
 
       </div>
     </main>
