--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,9 +14,85 @@
 
   <main>
 
-  
-    <h1><%= title %></h1>
+    
+  <section class="hero">
+    <div class="hero-container">
+      <h1 class="hero-title">
+        Store, Share, and Collaborate
+        <span class="hero-highlight">Effortlessly</span>
+      </h1>
+      <p class="hero-subtext">
+        Secure file storage and sharing made simple. Upload, organize, and share your files 
+        with anyone, anywhere, anytime.
+      </p>
+      <div class="hero-buttons">
+        <% if (locals.user) { %>
+        <button class="hero-btn primary"
+        onclick="location.href='/files'">View Dashboard</button>
+        <button class="hero-btn outline"
+        onclick="location.href='/log-out'">Log Out</button>
+        <% } else { %>
+        <button class="hero-btn primary"
+        onclick="location.href='/sign-up'">Get Started Now</button>
+        <button class="hero-btn outline"
+        onclick="location.href='/log-in'">Log In</button>
+        <%}%>
+      </div>
+    </div>
+  </section>
 
+
+  <section class="features">
+    <div class="features-container">
+      <div class="features-title">
+        <h2>Everything you need for file management</h3>
+      </div>
+      <div class="features-cards">
+        <div class="features-card">
+          <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title></title> <g id="Complete"> <g id="upload"> <g> <path d="M3,12.3v7a2,2,0,0,0,2,2H19a2,2,0,0,0,2-2v-7" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path> <g> <polyline data-name="Right" fill="none" id="Right-2" points="7.9 6.7 12 2.7 16.1 6.7" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></polyline> <line fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" x1="12" x2="12" y1="16.3" y2="4.8"></line> </g> </g> </g> </g> </g></svg>
+          <h3 class="features-card-title">Easy Upload</h3>
+          <p class="features-card-subtext">
+            Upload and share files with the click of a button. Support for all file types up to 5GB per file.
+          </p>
+        </div>
+
+        <div class="features-card">
+          <svg viewBox="-1 0 26 26" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title>share</title> <desc>Created with Sketch Beta.</desc> <defs> </defs> <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage"> <g id="Icon-Set" sketch:type="MSLayerGroup" transform="translate(-312.000000, -726.000000)" fill="#000000"> <path d="M331,750 C329.343,750 328,748.657 328,747 C328,745.343 329.343,744 331,744 C332.657,744 334,745.343 334,747 C334,748.657 332.657,750 331,750 L331,750 Z M317,742 C315.343,742 314,740.657 314,739 C314,737.344 315.343,736 317,736 C318.657,736 320,737.344 320,739 C320,740.657 318.657,742 317,742 L317,742 Z M331,728 C332.657,728 334,729.343 334,731 C334,732.657 332.657,734 331,734 C329.343,734 328,732.657 328,731 C328,729.343 329.343,728 331,728 L331,728 Z M331,742 C329.23,742 327.685,742.925 326.796,744.312 L321.441,741.252 C321.787,740.572 322,739.814 322,739 C322,738.497 321.903,738.021 321.765,737.563 L327.336,734.38 C328.249,735.37 329.547,736 331,736 C333.762,736 336,733.762 336,731 C336,728.238 333.762,726 331,726 C328.238,726 326,728.238 326,731 C326,731.503 326.097,731.979 326.235,732.438 L320.664,735.62 C319.751,734.631 318.453,734 317,734 C314.238,734 312,736.238 312,739 C312,741.762 314.238,744 317,744 C318.14,744 319.179,743.604 320.02,742.962 L320,743 L326.055,746.46 C326.035,746.64 326,746.814 326,747 C326,749.762 328.238,752 331,752 C333.762,752 336,749.762 336,747 C336,744.238 333.762,742 331,742 L331,742 Z" id="share" sketch:type="MSShapeGroup"> </path> </g> </g> </g></svg>
+          <h3 class="features-card-title">Instant Sharing</h3>
+          <p class="features-card-subtext">
+            Generate secure share links instantly. Control access with expiration dates and link management tools.
+          </p>
+        </div>
+
+        <div class="features-card">
+          <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M12.261 1.03462C12.6971 1.15253 13 1.54819 13 1.99997V8.99997H19C19.3581 8.99997 19.6888 9.19141 19.8671 9.50191C20.0455 9.8124 20.0442 10.1945 19.8638 10.5038L12.8638 22.5038C12.6361 22.8941 12.1751 23.0832 11.739 22.9653C11.3029 22.8474 11 22.4517 11 22V15H5C4.64193 15 4.3112 14.8085 4.13286 14.498C3.95452 14.1875 3.9558 13.8054 4.13622 13.4961L11.1362 1.4961C11.3639 1.10586 11.8249 0.916719 12.261 1.03462ZM6.74104 13H12C12.5523 13 13 13.4477 13 14V18.301L17.259 11H12C11.4477 11 11 10.5523 11 9.99997V5.69889L6.74104 13Z" fill="#000000"></path> </g></svg>
+          <h3 class="features-card-title">Lightning Fast</h3>
+          <p class="features-card-subtext">
+            Global CDN ensures fast uploads and downloads from anywhere in the world.
+          </p>
+        </div>
+        
+        <div class="features-card">
+          <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M3 13.6493C3 16.6044 5.41766 19 8.4 19L16.5 19C18.9853 19 21 16.9839 21 14.4969C21 12.6503 19.8893 10.9449 18.3 10.25C18.1317 7.32251 15.684 5 12.6893 5C10.3514 5 8.34694 6.48637 7.5 8.5C4.8 8.9375 3 11.2001 3 13.6493Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+          <h3 class="features-card-title">Unlimited Storage</h3>
+          <p class="features-card-subtext">
+            Scale from personal use to enterprise with flexible storage plans.
+          </p>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <section class="cta">
+    <div class="cta-container">
+      <h2 class="cta-title">Ready to get started?</h2>
+      <p class="cta-content">Join thousands of imaginary users who trust Uploadify for their file storage and sharing needs.</p>
+      <button class="cta-button get-started-button"
+      onclick="location.href='/sign-up'">Start Your Free Trial</button>
+      <p class="cta-subtext">No credit card required • unlimited free trial</p>
+    </div>
+  </section>
   </main>
 
   <%- include('partials/footer') %>
