--- a/views/insideFolder.ejs
+++ b/views/insideFolder.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Folder View - Uploadify</title>
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
@@ -35,7 +35,7 @@
     </div>
 
     <%- include('partials/displayFiles') %>
-    
+
   </main>
 
   <%- include('partials/footer') %>
