--- a/views/sign-up-form.ejs
+++ b/views/sign-up-form.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Sign Up - Uploadify</title>
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
@@ -32,9 +32,10 @@
             </div>
             <div class = "form-group">
             <button type="submit">Sign Up</button>
-            
             </div>
           </form>
+
+        <%- include('partials/errors.ejs') %>
         
         <div class = "form-spacer">
         <hr>
@@ -43,7 +44,7 @@
         </div>
         
         <p class="login-signup-title">Have an Account?</p>
-        <button onclick="window.location.href='/log-in'">Log In</button>
+        <button onclick="window.location.href='/log-in'" class="dark-button">Log In</button>
 
       </div>
 
