removed unnecessary buttons and improved styling

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,13 +6,13 @@
   Uploadify</a>
   </div>
   <ul class = "navbar-links">
-    <li><a href="/">Home</a></li>
-    <li><a href="/files">Uploads</a></li>
-    <%if(locals.user){%>
-    <li><a href="log-out">Log Out</a></li>
-    <%}else{%>
-    <li><a href="log-in">Log In</a></li><%}%>
     
+    <%if(locals.user){%>
+    <li><a href="/files" class="log-in-button">Uploads</a></li>
+    <li><a href="log-out" class="log-in-button">Log Out</a></li>
+    <%}else{%>
+    <li><a href="log-in" class="log-in-button">Log In</a></li>
+    <li><a href="sign-up" class="get-started-button">Get Started</a></li><%}%>
   </ul>
 </nav>
 </header>
