--- a/public/style.css
+++ b/public/style.css
@@ -580,6 +580,61 @@ thead{
   text-decoration: underline;
 }
 
+/* Links Page - Using file info card styles*/
+
+.file-info-card-title-links{
+  padding-bottom:12px;
+  
+}
+
+
+.file-info-card-title-subtext{
+  color: var(--muted-text-color);
+  display:flex;
+  align-items: center;
+  gap:8px;
+  padding-bottom:32px;
+}
+
+.file-info-card-title-subtext svg{
+  width:25px;
+  height:25px;
+}
+
+.file-info-card-body-links{
+  display:flex;
+  flex-direction: column;
+  gap:16px;
+  padding-bottom:16px;
+}
+
+.file-info-card-body-link-group{
+  display:flex;
+  gap:16px;
+}
+
+.file-info-card-body-link-group input{
+  border: 1px solid var(--border);
+  border-radius:8px;
+  padding: 8px;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+}
+
+.file-info-card-body-link-group-expiration{
+  display:flex;
+  align-items: center;
+  gap:8px;
+  font-weight: bold;
+  
+}
+
+.file-info-card-body-link-group-expiration svg{
+  width:20px;
+  height:20px;
+}
+
+
+
 
 
 
@@ -595,6 +650,12 @@ thead{
 .create-folder-modal input:focus{
   /*outline:none;
   border:2px solid rgb(0, 180, 0);*/
+}
+
+.create-folder-modal input{
+  padding: 6px;
+  border: 1px solid var(--border);
+  border-radius:4px;
 }
 
 
@@ -628,7 +689,19 @@ thead{
 }
 
 .darker-blue-button:hover{
+  background-color: var(--dark-blue-hover);
+}
 
+.gray-button{
+    border:none;
+  cursor: pointer;
+  background-color: rgb(151, 151, 151);
+  color:#F9FaF8;
+  border-radius: 8px;
+  padding:8px 24px;
+  font-family:sans-serif;
+  font-size:.9rem;
+  box-shadow: 3px 3px 5px rgb(201, 201, 201);
 }
 
 
@@ -662,6 +735,7 @@ thead{
   padding:8px 24px;
   font-family:sans-serif;
   font-size:.9rem;
+  box-shadow: 3px 3px 5px rgb(201, 201, 201);
 }
 
 .green-button:hover{
