updated file shared file info styling

--- a/views/sharedFileInfo.ejs
+++ b/views/sharedFileInfo.ejs
@@ -18,7 +18,7 @@
       </div>
 
       <div class="file-info-card">
-        <p class="file-info-card-title"><%= file.originalName %></p>
+        <p class="file-info-card-title">File Info</p>
         <div class="file-info-card-body">
           <p>Name:</p>
           <p><%=locals.file.originalName%></p>
