updated folder modal styling

--- a/views/partials/folderModal.ejs
+++ b/views/partials/folderModal.ejs
@@ -3,6 +3,6 @@
 
     <input type="text" name="folder_name" id="folder_name" placeholder="New Folder">
     <button type="submit" class ="green-button">Create Folder</button>
-    <button type="button" class ="close-create-folder-modal orange-button">Close</button>
+    <button type="button" class ="close-create-folder-modal gray-button">Close</button>
   </form>
 </dialog>
