updated href link to accurately point to root url and then add new reference

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -9,10 +9,10 @@
     
     <%if(locals.user){%>
     <li><a href="/files" class="log-in-button">Uploads</a></li>
-    <li><a href="log-out" class="log-in-button">Log Out</a></li>
+    <li><a href="/log-out" class="log-in-button">Log Out</a></li>
     <%}else{%>
-    <li><a href="log-in" class="log-in-button">Log In</a></li>
-    <li><a href="sign-up" class="get-started-button">Get Started</a></li><%}%>
+    <li><a href="/log-in" class="log-in-button">Log In</a></li>
+    <li><a href="/sign-up" class="get-started-button">Get Started</a></li><%}%>
   </ul>
 </nav>
 </header>
