change button from gray to blue in folderModal

--- a/views/partials/folderModal.ejs
+++ b/views/partials/folderModal.ejs
@@ -2,7 +2,7 @@
   <form action="/create-folder" method="post">
 
     <input type="text" name="folder_name" id="folder_name" placeholder="New Folder">
-    <button type="submit" class ="green-button">Create Folder</button>
+    <button type="submit" class ="blue-button">Create Folder</button>
     <button type="button" class ="close-create-folder-modal gray-button">Close</button>
   </form>
 </dialog>
