--- a/views/fileInfo.ejs
+++ b/views/fileInfo.ejs
@@ -45,7 +45,7 @@
           <div class="file-info-card-buttons-top">
             <button onclick="window.location='/download-file/<%=locals.file.id%>'" class="blue-button">Download File</butotn>
             <form action="/delete-file/<%= locals.file.id %><%if(locals.file.folderId){%>/<%=locals.file.folderId%><%}%> " method="POST" onsubmit="return confirm('Are you sure you want to delete this file?');">
-              <button type="submit" class="red-button">Delete File</button>
+              <button type="submit" class="red-button button-shadow">Delete File</button>
             </form>
           </div>
 
