--- a/views/insideFolder.ejs
+++ b/views/insideFolder.ejs
@@ -30,6 +30,9 @@
             <button type="button" onclick="document.getElementById('realFileInput').click();"
             >Upload File</button>
         </form>
+        <form action="/delete-folder/<%=locals.folder.id%>" method="POST" onsubmit="return confirm('Are you sure you want to delete this folder?');">
+          <button type="submit" class="gray-button2">Delete Folder</button>
+        </form>
       </div>
 
     </div>
