class changes for improved mobile UX

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -8,8 +8,8 @@
   <ul class = "navbar-links">
     
     <%if(locals.user){%>
-    <li><a href="/files" class="log-in-button">Uploads</a></li>
-    <li><a href="/log-out" class="log-in-button">Log Out</a></li>
+    <li><a href="/files" class="log-in-button-logged-in">Uploads</a></li>
+    <li><a href="/log-out" class="log-in-button-logged-in">Log Out</a></li>
     <%}else{%>
     <li><a href="/log-in" class="log-in-button">Log In</a></li>
     <li><a href="/sign-up" class="get-started-button">Get Started</a></li><%}%>
